--- a/moments/1/index.html
+++ b/moments/1/index.html
@@ -1,2 +1,2 @@
-<!doctype html><html lang=zh-Hans><head><title>https://javioustlj.github.io/moments/moments/</title>
-<link rel=canonical href=https://javioustlj.github.io/moments/moments/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://javioustlj.github.io/moments/moments/"></head></html>
+<!doctype html><html lang=zh-Hans><head><title>https://tianmo.tech/moments/moments/</title>
+<link rel=canonical href=https://tianmo.tech/moments/moments/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://tianmo.tech/moments/moments/"></head></html>
